--- a/html/informações_pacote/index.html
+++ b/html/informações_pacote/index.html
@@ -1,3 +1,8 @@
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,61 +13,73 @@
     <title>Informações do Pacote</title>
 </head>
 <body>
-    <div class="container"> 
-        <div class="Cabecalho">
-            <div class="f1-Cabecalho">
-                <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
-                <div class="Menu">
-                    <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a> </div>
-                    <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
-                    <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO </a> </div>
-                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES </a></div>
-                    <div class="nm-conta"> <div class="conta"> <a href="../../html/minha_conta/index.html"> MINHA CONTA  </a> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""></div></div>
-                </div>
+    <div class="Cabecalho">
+        <div class="f1-Cabecalho">
+            <div class="Logo"> <img class="L" src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
+            <div class="Menu">
+                <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a> </div>
+                <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
+                <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO </a> </div>
+                <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES </a></div>
+                <div class="nm-conta"> <div class="conta"> <a href="../../html/minha_conta/index.html"> MINHA CONTA <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </a></div></div>
             </div>
         </div>
+    </div>
+    <div class="container"> 
         <div class="f1-container">
-            <div class="f2-container">
-                <div class="f3-container-linha">
-                    <div class="conteudo">
-                        <div class="conteudo-esquerda">
-                            <img src="" alt="" class="img-pacotes">
-                            <div class="inf-pacote">
-                                <div class="infP-cima">INFORMAÇÕES DO PACOTE</div>
-                                <div class="infP-baixo">
-                                    <div class="infP-baixo-esquerda">
-                                        <img src="../../react/tcc/public/assets/images/bonequinhos.svg" alt="" class="bonequinhos">
-                                        <div class="componentes">2 Ingressos</div>
-                                        <div class="componentes">Dia</div>
-                                        <div class="componentes">27/10/2021</div>
-                                    </div>
-                                    <div class="infP-baixo-direita">
-                                        <div class="componentes">Preço</div>
-                                        <div class="componentes">R$ 160,00</div>
-                                        <div class="componentes">Horário</div>
-                                        <div class="componentes">7hrs às 19hrs</div>
-                                    </div>
+            <div class="f2-container-linha">
+                <div class="conteudo">
+                    <div class="conteudo-esquerda">
+                        <img src="../../react/tcc/public/assets/images/HopiHari.png" alt="" class="img-pacotes">
+                        <div class="inf-pacote">
+                            <div class="infP-cima">INFORMAÇÕES DO PACOTE</div>
+                            <div class="infP-baixo">
+                                <div class="infP-baixo-esquerda">
+                                    <img src="../../react/tcc/public/assets/images/bonequinhos (1).svg" alt="" class="bonequinhos">
+                                    <div class="componentes">2 Ingressos</div>
+                                    <div class="componentes">Dia:</div>
+                                    <div class="componentes">27/10/2021</div>
+                                </div>
+                                <div class="infP-baixo-direita">
+                                    <div class="componentes">Preço:</div>
+                                    <div class="componentes">R$ 160,00</div>
+                                    <div class="componentes">Horário:</div>
+                                    <div class="componentes">7hrs às 19hrs</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="conteudo-direita">
-                            <div class="titulo-lugar">
-                                <div class="linha-titulo"></div>
-                                <div class="titulo">HOPI HARI</div>
-                            </div>
-                            <div class="subtitulos">Endereço</div>
-                            <div class="texto">O parque temático Hopi Hari está situado na Rodovia dos Bandeirantes Km 72, na cidade de Vinhedo - São Paulo.</div>
-                            <div class="subtitulos">Acesso</div>
-                            <div class="texto">O passaporte é válido para uma única entrada ao parque durante o dia da sua visita. Ao sair do parque o retorno será permitido somente com a compra de um novo passaporte.</div>
-                            <div class="subtitulos">Cancelamento</div>
-                            <div class="texto">Se você adquiriu algum produto no nosso site e não deseja, mas utilizá-lo encaminhe um e-mail para solicitacancelamento@hopihari.com.br e solicitar reembolso de produtos. Essa solicitação deverá ser feita em até 07 (sete) dias corridos após a data de confirmação da compra.</div>
-                        </div>
                     </div>
-                    <div class="link">
-                        <a href="Para mais informações acesse: https://www.hopihari.com.br " class="link-informações">Para mais informações acesse: https://www.hopihari.com.br </a>
+                    <div class="conteudo-direita">
+                        <div class="titulo-lugar">
+                            <div class="linha-titulo"></div>
+                            <div class="titulo">HOPI HARI</div>
+                        </div>
+                        <div class="subtitulos">Endereço</div>
+                        <div class="texto">O parque temático Hopi Hari está situado na Rodovia dos Bandeirantes Km 72, na cidade de Vinhedo | São Paulo. Rod. dos Bandeirantes, km 72 - Moinho, Vinhedo - SP, 13288-130</div>
+                        <div class="subtitulos">Acesso</div>
+                        <div class="texto">O passaporte é válido para uma única entrada ao parque durante o dia da sua visita. Ao sair do parque o retorno será permitido somente com a compra de um novo passaporte.</div>
+                        <div class="subtitulos">Cancelamento</div>
+                        <div class="texto">Se você adquiriu algum produto no nosso site e não deseja, mas utilizá-lo encaminhe um e-mail para solicitacancelamento@hopihari.com.br e solicitar reembolso de produtos. Essa solicitação deverá ser feita em até 07 (sete) dias corridos após a data de confirmação da compra.</div>
                     </div>
                 </div>
+                <div class="link">
+                    <a href="https://www.hopihari.com.br " class="link-informacoes">Para mais informações acesse: https://www.hopihari.com.br  </a>
+                </div>
             </div>
+        </div>
+        <div class="botoes-sobrepostos">
+            <button class="voltar">
+                <a class="link-voltar"href="../../html/inicial/index.html">
+                <div class="texto-botao">VOLTAR</div>
+                <img src="../../react/tcc/public/assets/images/Setinha.svg" alt="" class="img-botao1">
+                </a>
+            </button>
+
+            <button class="compra">
+                <a class="link-pagamento" href="../cartão_credito/index.html">
+                <img src="../../react/tcc/public/assets/images/compra.svg" alt="" class="img-botao2">
+                </a>
+            </button>
         </div>
     </div>
 </body>
