--- a/html/informações_pacote/index.html
+++ b/html/informações_pacote/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="Cabecalho">
         <div class="f1-Cabecalho">
-            <div class="Logo"> <img class="L" src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
+            <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div>
             <div class="Menu">
                 <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a> </div>
                 <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a> </div>
