--- a/html/conta_aprovada/index.html
+++ b/html/conta_aprovada/index.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Conta_aprovada</title>
 </head>
 <body>
+    <div class="Container">
+        <div class="Cabecalho">
+            <div class="f1-Cabecalho">
+                <div class="Logo"> <img src="../../react/tcc/public/assets/images/logo1.svg" alt=""> </div> 
+                <div class="Menu">               
+                    <div class="Menu-f1"> <a href="../../html/inicial/index.html">INICIO</a></div>
+                    <div class="Menu-f1"> <a href="../../html/lugares/index.html">LUGARES</a></div>
+                    <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO</a></div>
+                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES</a></div>
+                    <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MINHA <br> CONTA</a></div>
+                    <div class="nm-conta"> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
+            </div> 
+        </div>
+    </div>
+             <div class="dasd"> </div>
+             <div class="dasd-f1"></div>
+        
+             <div class="dasd-f2">
+                 <div class="informacoes">Informações</div>
+                 <div class="Compra">COMPRA<br> APROVADA</div>
+                 <div class="okay"><img src="../../react/tcc/public/assets/images/ok 1.png"></div>
+                 <div class="vava">Voltar para a página inicial</div>
+             </div>
+    </div>
     
 </body>
 </html>
