--- a/html/conta_aprovada/index.html
+++ b/html/conta_aprovada/index.html
@@ -18,7 +18,7 @@
                     <div class="Menu-f1"> <a href="../../html/fale_conosco/index.html">FALE CONOSCO</a></div>
                     <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MEUS PACOTES</a></div>
                     <div class="Menu-f1"> <a href="../../html/meus_pacotes/index.html"> MINHA <br> CONTA</a></div>
-                    <div class="nm-conta"> <img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </div>
+                    <div class="nm-conta"> <a href="../../html/meus_pacotes/index.html"><img src="../../react/tcc/public/assets/images/perfil.svg" alt=""> </a> </div>
             </div> 
         </div>
     </div>
