--- a/html/1-tela_comandos/index.html
+++ b/html/1-tela_comandos/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-1">
-            <div class="titulo-comando"> TuriSPace </div>
+            <div class="titulo-comando"> TURI<b>SP</b>ACE </div>
                 <div class="comandos">
                     <div class="usuario"> 
                         <div class="titulo-usuario"> USUARIO:</div>
